     revision id was deterministically unique. (Robert Collins)

   * Committing a change which is not a merge and does not change the number of
     files in the tree is faster by utilising the data about whether files are
     changed to determine if the tree is unchanged rather than recalculating
     it at the end of the commit process. (Robert Collins)

   * Inventory serialisation no longer double-sha's the content.
     (Robert Collins)

   * Knit text reconstruction now avoids making copies of the lines list for
     interim texts when building a single text. The new ``apply_delta`` method
     on ``KnitContent`` aids this by allowing modification of the revision id
     such objects represent. (Robert Collins)

   * Pack indices are now partially parsed for specific key lookup using a
     bisection approach. (Robert Collins)

   * Partial commits are now approximately 40% faster by walking over the
     unselected current tree more efficiently. (Robert Collins)

   * XML inventory serialisation takes 20% less time while being stricter about
     the contents. (Robert Collins)

   * Graph ``heads()`` queries have been fixed to no longer access all history
     unnecessarily. (Robert Collins)

  IMPROVEMENTS:

   * ``bzr+https://`` smart server across https now supported. 
     (John Ferlito, Martin Pool, #128456)

   * Mutt is now a supported mail client; set ``mail_client=mutt`` in your
     bazaar.conf and ``send`` will use mutt. (Keir Mierle)

   * New option ``-c``/``--change`` for ``merge`` command for cherrypicking 
     changes from one revision. (Alexander Belchenko, #141368)

   * Show encodings, locale and list of plugins in the traceback message.
     (Martin Pool, #63894)

   * Experimental directory formats can now be marked with
     ``experimental = True`` during registration. (Ian Clatworthy)

  DOCUMENTATION:

   * New *Bazaar in Five Minutes* guide.  (Matthew Revell)
